--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -2,10 +2,14 @@ FROM node:18-alpine
 
 WORKDIR /app
 
-COPY package*.json ./
-RUN npm ci --only=production
+# Copy only package files first for better caching
+COPY server/package*.json ./
 
-COPY . .
+# Install dependencies
+RUN npm install
+
+# Copy server source code
+COPY server/src ./src
 
 EXPOSE 3001
 CMD ["npm", "start"]
