--- a/server/package.json
+++ b/server/package.json
@@ -4,25 +4,16 @@
     "type": "module",
     "scripts": {
         "start": "node src/server.js",
-        "dev": "nodemon src/server.js",
-        "test": "jest",
-        "migrate": "node scripts/migrate.js"
+        "dev": "nodemon src/server.js"
     },
     "dependencies": {
         "cors": "^2.8.5",
-        "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "ioredis": "^5.3.2",
         "jsonwebtoken": "^9.0.0",
         "pg": "^8.11.0",
         "redis": "^4.7.0",
-        "uuid": "^9.0.0",
-        "ws": "^8.13.0"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.22.1",
-        "@babel/preset-env": "^7.22.4",
-        "jest": "^29.5.0",
-        "nodemon": "^2.0.22"
+        "ws": "^8.13.0",
+        "uuid": "^9.0.0"
     }
 }
